feat: render-ready build/start scripts + static jobs

--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dev": "convex dev --once && node setup.mjs && npm-run-all --parallel dev:frontend dev:backend",
     "dev:frontend": "vite --open",
     "dev:backend": "convex dev",
+
+    "build": "vite build",
+    "start": "vite preview --port $PORT",
+
     "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
   },
+
+  "engines": { "node": ">=18.0.0" },
+
   "dependencies": {
     "@convex-dev/auth": "^0.0.80",
     "clsx": "^2.1.1",
