fix: bind vite preview to 0.0.0.0 for Render

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:backend": "convex dev",
 
     "build": "vite build",
-    "start": "vite preview --port $PORT",
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
 
     "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
   },
